# ADTplayground

./: .gitignore  README.md
DrBoolean_intersection_monoid/: README.md  index.js  package.json
beginning-elm/: HomePage.elm  Playground.elm  elm.js  homepage.html  index.html
crocks_async_error_handling/: README.md  concatResults.js  data.js  funcs.js  package.json
crocks_async_with_readers/: data.json  helpers.js  index.js  package.json
crocks_binary_branching/: README.md  index.js  package.json
crocks_monoid_first_match/: README.md  data.js  index.js  package.json
d3v4-starter/: README.md  index.html  package.json
elm-visualization_starter/: elm-package.json
elm_autocomplete/: DynamicEventRegistration.elm  KeycursorHead.elm  WindowSlide1.elm  WindowSlide2.elm  WindowSlide3.elm  WindowSlide4.elm
elm_automaton/: Automaton.elm  Main.elm
elm_contact_form/: Contact.elm  Register.elm  Validation.elm
elm_decodeJson/: README.md  decodeJson.elm
elm_helpers/: Helpers.elm
elm_logic_functions/: Logic.elm
elm_monoid/: All.elm  Any.elm  Endo.elm  First.elm  Intersection.elm  Last.elm  Max.elm  Min.elm  Product.elm  Sum.elm  Union.elm
elm_recursive_update/: Main.elm
elm_register_form/: Register.elm  Validation.elm
elm_simple_form/: Main.elm  Validation.elm
haskell-async-exception/: README.md  haskell-async-exception.cabal
haskell-async-exception/.stack-work/install/x86_64-linux/lts-13.19/8.6.4/flag-cache/: haskell-async-exception-0.1.0.0
haskell-async-exception/.stack-work/intero/: intero25091-Iz-TEMP.hs  intero25091GAu-TEMP.hs  intero25091KZm-TEMP.hs  intero25091Nvt-TEMP.hs  intero25091TRo-TEMP.hs  intero25091Xqg-TEMP.hs  intero25091k7a-TEMP.hs  intero25091xMV-TEMP.hs  intero25091zhV-TEMP.hs
haskell-async-exception/.stack-work/odir/: Main.hi  Main1.hi  Main2.hi  Main3.hi
haskell-async-exception/src/: Main.hs  Main4.hs
haskell-beam-starter/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
haskell-crafting-interpreters/: README.md  default.nix  haskell-crafting-interpreters.cabal  release.nix  shell.nix  stack.yaml
haskell-crafting-interpreters/src/: Main.hs  Token.hs
haskell-dsum-experiment/: ChangeLog.md  README.md  package.yaml
haskell-exception-read/: ChangeLog.md  README.md  package.yaml
haskell-magento-import/: README.md  package.yaml
haskell-nix-stack-intero/: LICENSE  README.md  default.nix  haskell-nix-stack-intero.cabal  pkgs-from-json.nix  release.nix  shell.nix
haskell-nix-stack-intero/nix/: intero-0-1-34.nix  nixos-19-03.json  nixpkgs.nix
haskell-optparse-starter/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
haskell-quickcheck-starter/: ChangeLog.md  README.md  package.yaml
haskell-reflex-platform-intero/: .gitignore  README.md  default.nix  stack.yaml
haskell-regex-starter/: ChangeLog.md  README.md  package.yaml
haskell-shopify-api/: README.md  package.yaml
haskell-tonatona-mod/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
haskell_starter/: Eight.hs  FortyNine.hs  FourTeen.hs  GraphTest.hs  Queue.hs  Seven.hs  Sixty.hs  SkewHeap.hs  Stack.hs  StringDistance.hs  TenFour.hs  TenOne.hs  Twelve.hs
haskell_starter/zippers/: .gitignore  README.md  stack.yaml  zippers.cabal
haskell_starter/zippers/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell_starter/zippers/src/: Main.hs
idris-hello-world/: hello.idr  row.idr
js_data_structures/: Either.js  Maybe.js  Memorize.js  Queue.js  tailRec.js
keras_starter/: binary_classifier_net.py  mean.net  mean_net.py  multiclass_classifier_net.py  run_saved_model.py
php_starter/: array.php  closure.php  datetime.php  syntax.php
purescript-aim/: .gitignore  Makefile  package.json  packages.dhall  spago.dhall
purescript-blaze-markup/: package.json  packages.dhall  spago.dhall
purescript-carquery/: .gitignore  bower.json  package.json
purescript-codec-design/: bower.json
purescript-context-free-grammar/: bower.json
purescript-csv_mod/: bower.json
purescript-fast-xml-parser/: .gitignore  bower.json  package.json
purescript-fixed-precision_experiment/: bower.json  package.json
purescript-fixed-vector/: bower.json
purescript-form_experiment/: .gitignore  bower.json  index.html  package.json
purescript-formatters_experiment/: bower.json
purescript-formless_experiment/: .gitignore  bower.json  package.json
purescript-formlessv5_experiment/: bower.json  package.json
purescript-formlessv5_fix/: .gitignore  (+1 more)
(+1440 files in other folders)
