name:                haskell-nix-stack-intero
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/boygao1992/haskell-nix-stack-intero#readme
license:             BSD3
license-file:        LICENSE
author:              wenbo
maintainer:          wg2313@columbia.edu
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-nix-stack-intero
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
