name:                zippers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/boygao1992/zippers#readme
license:             BSD3
license-file:        LICENSE
author:              wenbo
maintainer:          example@example.com
copyright:           2019 wenbo
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable zippers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
